--- a/functions/package.json
+++ b/functions/package.json
@@ -9,8 +9,11 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "firebase-admin": "~7.0.0",
-    "firebase-functions": "^2.2.0"
+    "firebase-functions": "^2.2.0",
+    "showdown": "^1.9.0",
+    "swig": "^1.4.2"
   },
   "private": true
 }
